--- a/home/home.css
+++ b/home/home.css
@@ -120,7 +120,10 @@ article{
 .grid-text .link {
     text-decoration: none;
     font-size: 1.4em;
-    text-align: left;
+    text-align: left;   
+}
+.link span{
+    color: #333;
 }
 
 .icon div {
